# simple-swag

./: README.md  setup.cfg
src/start/: minimal.html  styles.css
src/swag/: __init__.py  autoblog.py  base.py  build.py  cli.py  lorem_posts.py  pages.py  resources.py
