[metadata]
name = simple-swag
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    fire
    lorem
    markdown
    markdown-full-yaml-metadata
    pandas


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    swag = swag.cli:main
